# app-spec

./: BLOG.md  BUG_REPORT.md  README.md  demo.py  requirements.txt
appspec/: LICENSE  PROPOSAL.md  README.md  pyproject.toml
appspec/.cursor/skills/appspec/: SKILL.md
appspec/src/appspec/: __init__.py  compiler.py  models.py  scaffold.py
appspec/src/appspec/cli/: __init__.py  main.py
appspec/src/appspec/cli/commands/: change.py  create.py  generate.py  mongodb.py  spec.py
appspec/src/appspec/engines/: __init__.py  base.py  mongodb.py  postgresql.py
appspec/src/appspec/generation/: __init__.py  composer.py  contracts.py  registry.py
appspec/src/appspec/generation/renderers/: __init__.py  api.py  data_model.py  features.py
appspec/src/appspec/generation/renderers/templates/: api.md.jinja  change_proposal.md.jinja  data_model.md.jinja  features.md.jinja
appspec/src/appspec/generation/targets/: __init__.py
appspec/src/appspec/generation/targets/mongodb_artifacts/: target.py
appspec/src/appspec/generation/targets/python_fastapi/: target.py
appspec/src/appspec/generation/targets/sql_artifacts/: __init__.py  target.py
appspec/src/appspec/llm/: __init__.py  client.py  pipeline.py  prompts.py
appspec/src/appspec/store/: __init__.py  mongodb.py
appspec/src/appspec/validation/: __init__.py  engine_compat.py  pages.py  quality.py  safety.py  schema.py
appspec/tests/contract/: test_plugin_discovery.py
appspec/tests/integration/: test_change_apply.py  test_cli.py  test_compiler.py  test_llm.py
appspec/tests/unit/: test_advanced_types.py  test_auth_codegen.py  test_codegen.py  test_db_adapter.py  test_models.py  test_mongodb.py  test_page_validation.py  test_renderers.py  test_safety.py  test_tailwind_ui.py  test_validator.py
(+95 files in other folders)
